@startuml


abstract class Pet{
    {abstract} + careFor()
    + String getName()
    + void setName()
    + void setOwner()
    + String getOwner()
    __ private data __
    - String name
    - String owner

}
abstract class Fish{
    + void careFor()
    {abstract} + void swim()
    + void changeWater()
}
abstract class Mammal{
    {abstract} + void careFor()
    {abstract} + void walk()
}
class Cat{
    {abstract} + void careFor()
    {abstract} + void walk()
}
class Rabbit{
    {abstract} + void careFor()
    {abstract} + void walk()
}
class Guppy{
    {abstract} + void swim()
}
class Goldfish{
    {abstract} + void swim()
}
Pet <|-- Mammal
Pet <|-- Fish
Mammal <|-- Cat
Mammal <|-- Rabbit
Fish <|-- Guppy
Fish <|-- Goldfish
@enduml